inserito stile minimale

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,45 @@
-.container-dadi {
-    margin-top: 15rem;
+body {
+    text-align: center;
 }
+
+.container {
+    max-width: 600px;
+    margin: auto;
+}
+
+.container-mail {
+     background-color: firebrick;
+     height: 20rem;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+}
+
+.container-dadi {
+    background-color: peru;
+    margin-top: 3rem;
+    height: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.mail-flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.btn {
+    padding: 0.5rem 1rem;
+    background-color: orange;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.btn-dadi {
+    margin-top: 2rem;
+}
+
